# black-box-adversarial-attacks

./: .gitignore  README.md  attack.py  cmaes.py  main.py  models.py  optimizers.py  pyproject.toml  run_tmux_stochastic_attack.sh  sweep_attacks.sh  train_models.py  utils.py
amheattack/: attack.py  foo.py  main.py  models.py  optimizers.py  stochastic_attack.py  train_models.py  utils.py
logs/: models_training.txt  perturbation_dist_from_mea_pertubation.json  stochastic_growth.csv
notebooks/: mean_perturabation.ipynb  mean_perturabation_alpha_0.1_cifar.ipynb  mean_perturabation_alpha_0.1_imagenet.ipynb  optimizers_bench.ipynb  stochasti_growth.ipynb
output_stochastic/cifar10_stochastic_alpha_0_seed_1_iters_500/: args.txt  log.csv
results/: imagenet_bench.csv  optimizer_bench.csv  optimizer_bench_cifar_v2.csv  stochastic_growth_alpha_0.1_cifar.csv  stochastic_growth_alpha_0.1_cifar.json  stochastic_growth_alpha_0.1_imagenet.csv
scripts/: adversarial_attack.py  adversarial_attacks_merge_results_to_table.py  analyze_stochastic_growth.py  avg_pertubration_stochastic_growth.py  collect_perturbation_images.py  stochastic_growth_attack.py  stochastic_growth_attl_distance_from_mean_image.py  train_models.py
scripts/figures/: boxplot.py
shell_scripts/: sbatch_optimizers.sh  sbatch_optimizers_imagenet.sh  sbatch_stochastic_attack.sh  sbatch_stochastic_attack_imagenet.sh  sweep_attacks.sh  test_optimizers.sh
